--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="img/Stunting.png" class="img-fluid clip" alt="Responsive image">
                 <div class="row mt-3">
                     <div class="d-flex justify-content-between">
-                        <div class="clip1">Pre-test</div>
+                        <a href="pretest.html" style="text-decoration: none;"><div class="clip1">Pre-test</div></a>
                         <div class="clip2">Materi</div>
                         <div class="clip3">Post-test</div>
                     </div>
