--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="row mt-3">
                     <div class="d-flex justify-content-between">
                         <a href="pretest.html" style="text-decoration: none;"><div class="clip1">Pre-test</div></a>
-                        <div class="clip2">Materi</div>
+                        <a href="materi.html" style="text-decoration: none;"><div class="clip2">Materi</div></a>
                         <div class="clip3">Post-test</div>
                     </div>
                 </div>
