--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <div class="d-flex justify-content-between">
                         <a href="pretest.html" style="text-decoration: none;"><div class="clip1">Pre-test</div></a>
                         <a href="materi.html" style="text-decoration: none;"><div class="clip2">Materi</div></a>
-                        <div class="clip3">Post-test</div>
+                        <a href="postest.html" style="text-decoration: none;"><div class="clip3">Post-test</div></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 mt-5 pt-5">
                 <h1>Stunting</h1>
-                <p style="text-align: justify;">Kemajuan telah dicapai di seluruh dunia dalam mengurangi kekurangan gizi kronis dan angka pertumbuhan linear <span style="color: #fc9840;">stunting</span> pada anak di bawah usia 5 tahun, meskipun angka tersebut masih tetap tinggi di banyak wilayah. Kebijakan, program, dan intervensi yang mendukung kesehatan dan gizi ibu dan anak berpotensi meningkatkan pertumbuhan dan perkembangan anak. <span style="color: #fc9840; cursor: pointer;">Pelajari lebih lanjut...</span></p>
+                <p style="text-align: justify;">Kemajuan telah dicapai di seluruh dunia dalam mengurangi kekurangan gizi kronis dan angka pertumbuhan linear <span style="color: #fc9840;">stunting</span> pada anak di bawah usia 5 tahun, meskipun angka tersebut masih tetap tinggi di banyak wilayah. Kebijakan, program, dan intervensi yang mendukung kesehatan dan gizi ibu dan anak berpotensi meningkatkan pertumbuhan dan perkembangan anak. <a href="pretest.html" style="text-decoration: none;"><span style="color: #fc9840; cursor: pointer;">Pelajari lebih lanjut...</span></a></p>
             </div>
             
         </div>
