--- a/materi.html
+++ b/materi.html
@@ -32,7 +32,7 @@
                 <p>&emsp;<span style="color: #fc9840;">Stunting</span> adalah suatu kondisi dimana anak mengalami gangguan pertumbuhan, sehingga tinggi badan anak tidak sesuai dengan usianya, sebagai akibat dari masalah gizi kronis yaitu kekurangan asupan gizi dalam waktu yang lama.</p>
 
                 <img src="img/stunted_children.jpg" class="img-fluid" alt="" height="350px" width="350px">
-                <figcaption>Ilustrasi <span style="color: #fc9840;">stunting</span> pada anak</figcaption>
+                <figcaption>-Ilustrasi <span style="color: #fc9840;">stunting</span> pada anak</figcaption>
 
                 <p>&emsp; Berdasarkan Peraturan Menteri Kesehatan Republik Indonesia Nomor 2 Tahun 2020 tentang standar antropometri penilaian status gizi anak, <span style="color: #fc9840;">stunting</span> atau pendek merupakan status gizi yang didasarkan pada indeks tinggi badan menurut umur (TB/U) dengan z score kurang dari -2 SD (standar deviasi). <span style="color: #fc9840;">stunting</span> bukan hanya masalah gangguan pertumbuhan fisik saja, namun juga mengakibatkan anak menjadi mudah sakit, selain itu juga terjadi gangguan perkembangan otak dan kecerdasan, sehingga <span style="color: #fc9840;">stunting</span> merupakan ancaman besar terhadap kualitas sumber daya manusia di Indonesia (Kemenkes RI, 2020)</p>
             </div>
@@ -76,7 +76,7 @@
                 <p>&emsp; <span style="color: #fc9840;">Stunting</span> mengakibatkan otak seorang anak kurang berkembang. Ini berarti 1 dari 3 anak Indonesia akan kehilangan peluang lebih baik dalam hal pendidikan dan pekerjaan dalam sisa hidup mereka. <span style="color: #fc9840;">stunting</span> bukan semata pada ukuran fisik pendek, tetapi lebih pada konsep bahwa proses terjadinya <span style="color: #fc9840;">stunting</span> bersamaan dengan proses terjadinya hambatan pertumbuhan dan perkembangan organ lainnya, termasuk otak (Achadi, 2019). </p>
 
                 <img src="img/stunted-children-of-south-asia-1482479848-7954.jpg" class="img-fluid" alt="" height="350px" width="350px">
-                <figcaption>Ilustrasi Anak Terkena <span style="color: #fc9840;">Stunting</span></figcaption>
+                <figcaption>-Ilustrasi Anak Terkena <span style="color: #fc9840;">Stunting</span></figcaption>
 
                 <p>&emsp; Dampak buruk dari <span style="color: #fc9840;">stunting</span> dalam jangka pendek bisa menyebabkan terganggunya otak, kecerdasan, gangguan pertumbuhan fisik, dan gangguan metabolisme dalam tubuh. Sedangkan dalam jangka panjang akibat buruk yang dapat ditimbulkan adalah menurunnya kemampuan kognitif dan prestasi belajar, menurunnya kekebalan tubuh sehingga mudah sakit, risiko tinggi munculnya penyakit diabetes, kegemukan, penyakit jantung dan pembuluh darah, kanker, stroke dan disabilitas pada usia tua, serta kualitas kerja yang tidak kompetitif yang berakibat pada rendahnya produktifitas ekonomi (Kemenkes RI, 2020)</p>
             </div>
@@ -89,6 +89,16 @@
         <div class="row mt-2 materi">
             <div class="col">
                 <p>&emsp; Upaya intervensi untuk balita <span style="color: #fc9840;">stunting</span> difokuskan pada 1000 Hari Pertama Kehidupan (HPK) yaitu pada masa ibu hamil, ibu menyusui, dan anak dari usia 0 – 23 bulan, pada masa inilah penanganan balita pendek paling efektif dilakukan. 1000 hari pertama kehidupan ini meliputi 270 hari selama kehamilan dan 730 hari pertama setelah bayi dilahirkan yang telah dibuktikan secara ilmiah merupakan periode yang menentukan kualitas kehidupan. Oleh karena itu periode disebut dengan “periode emas”, “periode kritis” atau “window of opportuntiy” (Kementrian Kesehatan RI, 2022). Perkembangan otak, kecerdasan, ganggguan pertumbuhan fisik seperti <span style="color: #fc9840;">stunting</span>, dan gangguan metabolisme dalam tubuh merupakan akibat buruk yang akan timbulkan akibat permasalahan gizi pada periode tersebut dalam jangka panjang</p>
+            </div>
+        </div>
+        <div class="row mt-5 mb-5">
+            <div class="col-lg-2 col-md-4 col-sm-6">
+                <img src="img/orang-paham.png" class="img-fluid" alt="" height="150px" width="150px">
+            </div>
+            <div class="col-lg-10 col-md-8 col-sm-6">
+                <h1>Bagaimana Materi diatas?</span></h1>
+                <p>Apakah pengetahuan anda mengenai <span style="color: #fc9840;">stunting</span> bertambah?</p>
+                <p>Yuk, kta ke halaman selanjutnya. Agar kita dapat menilai sejauh mana pemahaman setelah membaca materi diatas. <a href="postest.html" style="text-decoration: none; cursor: pointer;"> <span style="color: #fc9840;">Halaman Selanjutnya...</span></a></p>
             </div>
         </div>
     </div>
