--- a/pretest.html
+++ b/pretest.html
@@ -22,9 +22,34 @@
                 <p>Sebelum masuk ke dalam Materi, <span style="color: #fc9840;">isi Pre-Test dulu yuk.</span>  Sehingga kami dapat lebih mudah dalam melakukan penilaian untuk penelitian kami.</p>
             </div>
         </div>
+        <div class="row pt-3">
+            <div class="col-sm-12 col-md-12">
+                <p>Assalamu'alaikum Wr. Wb.</p>
+                <p>Salam Sejahtera Untuk Kita Semua.</p>
+                <p>Perkenalkan saya Syahrully Suabgyo, Mahasiswa S1 Keperawatan Fakultas Keperawatam Universitas Bhakti Kencana Bandung.
+                Saat ini saya sedang melakukan penelitian untuk mata kuliah Skripsi. saya memohon untuk kesediaan saudara/i untuk
+                mengisi kuesioner ini agar membantu saya dalam penyusunan penelitian ini.
+                kuesioner ini terdiri dari beberapa pertanyaan.</p>
+                <p>adapun kriteria yang dibutuhkan dalam pengisian kuesioner ini yaitu sebagai berikut :</p>
+                <p>1.Ibu yang memiliki anak stunting.</p>
+                <p>2.Ibu yang mempunyai handphone.</p>
+                <p>3.Ibu yang mempunyai kuota dengan sinyal bagus.</p>
+                <p>Apabila kriteria diatas sesuai dengan kondisi anda, saya mohon kesediaan anda untuk mengisi setiap pertanyaan dengan
+                jujur. seluruh identitas dan data yang diperoleh akan dijaga kerahasiaannya dan akan digunakan untuk keperluan
+                penelitian saya saja.</p>
+                <p>jika anda setuju untuk mengisi kuesioner ini, silahkan pilih "Ya saya bersedia" pada pilihan dibawah. perlu diketahui
+                bahwa pengisian kuesioner ini dilakukan tanpa adanya keterpaksaan. jika ada pertanyaan, anda dapat menghubungi saya
+                melalui: <a href="mailto:syahrully443@gmail.com " style="text-decoration: none;color:#fc9840;">Email</a> atau <a href="https://wa.link/ckvcyl" style="text-decoration: none;color:#fc9840;">Whatsapp</a></p>
+              
+            </div>
+        </div>
         <div class="card" style="background-color: #31363F;">
             <div class="card-body">
                 <form action="https://sheetdb.io/api/v1/2n894t7499lvi" method="post" id="sheetdb-form">
+                    <div class="d-flex flex-row">
+                        <input type="checkbox" id="term" name="data[Term]" value="Ya, Saya bersedia" required>
+                        <label for="term"> &nbsp;Ya, saya bersedia.</label>
+                    </div>
                     <div class="form-group" id="form" >
                         <label for="Nama Ibu">Nama Ibu:</label>
                         <input type="text" class="form-control" id="Nama Ibu" name="data[Nama Ibu]" required />
