--- a/index.html
+++ b/index.html
@@ -11,17 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body style="background-color: #31363F;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="index.html" style="color: #fc9840;">Home</a>
+                    <a class="nav-link" href="pretest.html">Pre-Test</a>
+                    <a class="nav-link" href="materi.html">Materi</a>
+                    <a class="nav-link" href="postest.html">Post-test</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="container mt-5" style="background-color: #31363F;">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
                 <img src="img/Stunting.png" class="img-fluid clip" alt="Responsive image">
-                <div class="row mt-3">
+                <!-- <div class="row mt-3">
                     <div class="d-flex justify-content-between">
                         <a href="pretest.html" style="text-decoration: none;"><div class="clip1">Pre-test</div></a>
                         <a href="materi.html" style="text-decoration: none;"><div class="clip2">Materi</div></a>
                         <a href="postest.html" style="text-decoration: none;"><div class="clip3">Post-test</div></a>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 mt-5 pt-5">
                 <h1>Stunting</h1>
